--- a/css/homepage.css
+++ b/css/homepage.css
@@ -86,3 +86,21 @@
 .padding_bottom {
     padding-bottom: 8px;
 }
+.outer {
+  display: table;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.inner {
+  margin-left: auto;
+  margin-right: auto;
+  width: 400px;
+  /*whatever width you want*/
+}
